Fixing scrollbars and minor alignments

--- a/source/styleguide/molecules/SgFileIndex/SgFileIndex.css
+++ b/source/styleguide/molecules/SgFileIndex/SgFileIndex.css
@@ -12,10 +12,11 @@
   }
 
   &__name {
+    padding: 0.25em 0.5rem;
+
     &.is-active {
       background-color: color(var(--sg-color-gray-lighter) alpha(-75%));
       display: inline-block;
-      padding: 0.25em 0;
       position: relative;
       width: calc(100% - 2em);
 
