--- a/source/styleguide/molecules/SgPageShell/SgPageShell.css
+++ b/source/styleguide/molecules/SgPageShell/SgPageShell.css
@@ -1,4 +1,8 @@
 .SgPageShell {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
   &__header {
     position: sticky;
     top: 0;
@@ -26,13 +30,17 @@
     }
   }
 
+  .SgNavigation {
+    padding: 0 1.5em 0 0;
+  }
+
   &__navigation {
     background-color: var(--sg-color-white);
-    height: calc(100vh - 65px);
+    height: calc(100vh - 70px);
     min-width: 100%;
     opacity: 0;
     overflow-y: auto;
-    padding: 2.5em 2em;
+    padding: 2.5em 0.5em 2.5em 2em;
     position: sticky;
     top: 66px;
     transform: translateX(calc(-300px + 2em));
@@ -47,6 +55,18 @@
     @media (--sg-medium) {
       min-width: 300px;
       width: 300px;
+    }
+
+    &--scrollbar {
+      height: 100%;
+      opacity: 0.25;
+      right: 0.5em;
+      z-index: 2;
+
+      &--thumb {
+        background-color: var(--sg-color-gray-darker);
+        border-radius: 1rem;
+      }
     }
   }
 
@@ -78,4 +98,3 @@
     }
   }
 }
-
